packages/coln-compiler/test/golden/modular-lattice.output
-- elaborated


-- messages

debug[D0316]: cannot use inductively bound variable in a conjunctive context
17 |     meet a a = a
17 |                ^

error[E0200]: unexpected notation for field setting of the form `<fieldname> := <expr>`: Infix
49 |     bot : Element                                                                                                        
49 |     ^^^^^^^^^^^^^
